# minimal-life-os

./: .env.example  .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dependabot-automerge.yml
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  balance.tsx  index.tsx  settings.tsx  today.tsx
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/auth/: actions.ts  page.tsx
apps/web/app/balance/: page.tsx
apps/web/app/calendar/: page.tsx
apps/web/app/goals/: page.tsx
apps/web/app/habits/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/suggestions/: page.tsx
apps/web/app/tasks/: page.tsx
apps/web/app/today/: page.tsx
apps/web/src/components/: auth-form.tsx  life-dashboard.tsx  (+4 more)
docs/: DEVELOPMENT_WORKFLOW.md  api.md  architecture.md  data-retention.md  decisions.md  deploy.md  limitations.md  observability.md  privacy.md  product.md  release.md  runbooks.md  security.md  test-plan.md
opti/: README.md  pyproject.toml
opti/app/: main.py  models.py  routes.py  store.py
opti/app/static/: index.html
opti/tests/: test_task_state_api.py
scripts/: seed-owner.mjs
supabase/migrations/: 0001_initial_life_os.sql  0002_profiles_rls_and_entity_links.sql  0003_ai_contract_settings_seed.sql
tests/e2e/: smoke.spec.ts
(+29 files in other folders)
