[project]
name = "minimal-life-os-opti"
version = "0.2.0"
description = "v0.2 durable task engine backend for Minimal Life OS"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.109.0", "uvicorn[standard]>=0.27.0", "pydantic>=2.5.0", "httpx>=0.26.0", "pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
